--- a/Hextasy/Hextasy.csproj
+++ b/Hextasy/Hextasy.csproj
@@ -142,7 +142,7 @@
       <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
       <Name>Hextasy.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LightsOff\Hextasy.LightsOff.csproj">
+    <ProjectReference Include="..\Hextasy.LightsOff\Hextasy.LightsOff.csproj">
       <Project>{4ddaf828-7805-4e58-9596-8c935c638175}</Project>
       <Name>Hextasy.LightsOff</Name>
     </ProjectReference>
