--- a/Hextasy.FourInARow/Hextasy.FourInARow.csproj
+++ b/Hextasy.FourInARow/Hextasy.FourInARow.csproj
@@ -4,18 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4DDAF828-7805-4E58-9596-8C935C638175}</ProjectGuid>
+    <ProjectGuid>{A30347E1-EA0E-4945-A50A-98F37BFD79B2}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hextasy.LightsOff</RootNamespace>
-    <AssemblyName>Hextasy.LightsOff</AssemblyName>
+    <RootNamespace>Hextasy.FourInARow</RootNamespace>
+    <AssemblyName>Hextasy.FourInARow</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <FodyPath>..\packages\Fody.1.19.1.0</FodyPath>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <FodyPath>..\packages\Fody.1.19.1.0</FodyPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,20 +64,23 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="FourInARowGame.cs" />
+    <Compile Include="FourInARowGameLogic.cs" />
+    <Compile Include="FourInARowGameView.xaml.cs">
+      <DependentUpon>FourInARowGameView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FourInARowGameViewModel.cs" />
+    <Compile Include="FourInARowSettings.cs" />
+    <Compile Include="FourInARowSettingsView.xaml.cs">
+      <DependentUpon>FourInARowSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FourInARowSettingsViewModel.cs" />
     <Compile Include="HexagonField.cs" />
-    <Compile Include="ILightsOffSettingsViewModel.cs" />
-    <Compile Include="ILightsOffGameViewModel.cs" />
-    <Compile Include="LightsOffGame.cs" />
-    <Compile Include="LightsOffGameLogic.cs" />
-    <Compile Include="LightsOffSettings.cs" />
-    <Compile Include="LightsOffSettingsView.xaml.cs">
-      <DependentUpon>LightsOffSettingsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="LightsOffSettingsViewModel.cs" />
-    <Compile Include="LightsOffGameView.xaml.cs">
-      <DependentUpon>LightsOffGameView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="LightsOffGameViewModel.cs" />
+    <Compile Include="IFourInARowGameViewModel.cs" />
+    <Compile Include="IFourInARowSettingsViewModel.cs" />
+    <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -104,29 +107,27 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="LightsOffSettingsView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="LightsOffGameView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
+      <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
+      <Name>Hextasy.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
-      <Project>{870be3b8-1f0e-4422-a3b5-fde8bab6fda3}</Project>
-      <Name>Hextasy.Framework</Name>
-    </ProjectReference>
+    <Page Include="FourInARowGameView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FourInARowSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="Fody.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="Fody.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
