--- a/Hextasy.XInARow/Hextasy.XInARow.csproj
+++ b/Hextasy.XInARow/Hextasy.XInARow.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A30347E1-EA0E-4945-A50A-98F37BFD79B2}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hextasy.FourInARow</RootNamespace>
-    <AssemblyName>Hextasy.FourInARow</AssemblyName>
+    <RootNamespace>Hextasy.XInARow</RootNamespace>
+    <AssemblyName>Hextasy.XInARow</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -66,20 +66,20 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FourInARowGame.cs" />
-    <Compile Include="FourInARowGameLogic.cs" />
-    <Compile Include="FourInARowGameView.xaml.cs">
-      <DependentUpon>FourInARowGameView.xaml</DependentUpon>
+    <Compile Include="XInARowGame.cs" />
+    <Compile Include="XInARowGameLogic.cs" />
+    <Compile Include="XInARowGameView.xaml.cs">
+      <DependentUpon>XInARowGameView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FourInARowGameViewModel.cs" />
-    <Compile Include="FourInARowSettings.cs" />
-    <Compile Include="FourInARowSettingsView.xaml.cs">
-      <DependentUpon>FourInARowSettingsView.xaml</DependentUpon>
+    <Compile Include="XInARowGameViewModel.cs" />
+    <Compile Include="XInARowSettings.cs" />
+    <Compile Include="XInARowSettingsView.xaml.cs">
+      <DependentUpon>XInARowSettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FourInARowSettingsViewModel.cs" />
+    <Compile Include="XInARowSettingsViewModel.cs" />
     <Compile Include="HexagonField.cs" />
-    <Compile Include="IFourInARowGameViewModel.cs" />
-    <Compile Include="IFourInARowSettingsViewModel.cs" />
+    <Compile Include="IXInARowGameViewModel.cs" />
+    <Compile Include="IXInARowSettingsViewModel.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -116,11 +116,11 @@
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="FourInARowGameView.xaml">
+    <Page Include="XInARowGameView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="FourInARowSettingsView.xaml">
+    <Page Include="XInARowSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
