--- a/Hextasy/Hextasy.csproj
+++ b/Hextasy/Hextasy.csproj
@@ -138,9 +138,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Hextasy.FourInARow\Hextasy.FourInARow.csproj">
+    <ProjectReference Include="..\Hextasy.XInARow\Hextasy.XInARow.csproj">
       <Project>{a30347e1-ea0e-4945-a50a-98f37bfd79b2}</Project>
-      <Name>Hextasy.FourInARow</Name>
+      <Name>Hextasy.XInARow</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
       <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
