--- a/Hextasy.Trains/Hextasy.Trains.csproj
+++ b/Hextasy.Trains/Hextasy.Trains.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3E4C333-CB73-444F-8640-517C96D76DB2}</ProjectGuid>
+    <ProjectGuid>{8AD4738D-0FC5-4B1F-AB22-9F3D0EC379A9}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hextasy.JumpToKill</RootNamespace>
-    <AssemblyName>Hextasy.JumpToKill</AssemblyName>
+    <RootNamespace>Hextasy.Trains</RootNamespace>
+    <AssemblyName>Hextasy.Trains</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,7 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Caliburn.Micro">
+    <Reference Include="Caliburn.Micro, Version=1.5.2.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Caliburn.Micro.1.5.2\lib\net45\Caliburn.Micro.dll</HintPath>
     </Reference>
     <Reference Include="PropertyChanged">
@@ -64,18 +65,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="JumpToKillTile.cs" />
-    <Compile Include="JumpToKillGame.cs" />
-    <Compile Include="JumpToKillGameLogic.cs" />
-    <Compile Include="JumpToKillGameView.xaml.cs">
-      <DependentUpon>JumpToKillGameView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="JumpToKillGameViewModel.cs" />
-    <Compile Include="JumpToKillSettings.cs" />
-    <Compile Include="JumpToKillSettingsView.xaml.cs">
-      <DependentUpon>JumpToKillSettingsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="JumpToKillSettingsViewModel.cs" />
+    <Compile Include="DoubleMultiplierConverter.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -90,6 +80,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="StationTile.cs" />
+    <Compile Include="TrainsGame.cs" />
+    <Compile Include="TrainsGameLogic.cs" />
+    <Compile Include="TrainsGameView.xaml.cs">
+      <DependentUpon>TrainsGameView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TrainsGameViewModel.cs" />
+    <Compile Include="TrainsSettings.cs" />
+    <Compile Include="TrainsSettingsView.xaml.cs">
+      <DependentUpon>TrainsSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TrainsSettingsViewModel.cs" />
+    <Compile Include="TrainsTile.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -103,20 +106,20 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="FodyWeavers.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
       <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
       <Name>Hextasy.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="JumpToKillGameView.xaml">
+    <Resource Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="TrainsGameView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="JumpToKillSettingsView.xaml">
+    <Page Include="TrainsSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
