added support for different maps in Trains

--- a/Hextasy.Trains/Hextasy.Trains.csproj
+++ b/Hextasy.Trains/Hextasy.Trains.csproj
@@ -66,6 +66,9 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="DoubleMultiplierConverter.cs" />
+    <Compile Include="IMap.cs" />
+    <Compile Include="MapChina.cs" />
+    <Compile Include="MapGermany.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
