--- a/Hextasy.Trains/Hextasy.Trains.csproj
+++ b/Hextasy.Trains/Hextasy.Trains.csproj
@@ -69,6 +69,7 @@
     <Compile Include="IMap.cs" />
     <Compile Include="MapChina.cs" />
     <Compile Include="MapGermany.cs" />
+    <Compile Include="MapUnitedStates.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
