--- a/Hextasy.Trains/Hextasy.Trains.csproj
+++ b/Hextasy.Trains/Hextasy.Trains.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="DoubleMultiplierConverter.cs" />
     <Compile Include="IMap.cs" />
+    <Compile Include="MapBavaria.cs" />
     <Compile Include="MapChina.cs" />
     <Compile Include="MapGermany.cs" />
     <Compile Include="MapUnitedStates.cs" />
