--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>CardControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Cards\Card.cs" />
+    <Compile Include="Cards\FallenAngelCard.cs" />
     <Compile Include="CardWarsGame.cs" />
     <Compile Include="CardWarsGameLogic.cs" />
     <Compile Include="CardWarsGameView.xaml.cs">
@@ -82,6 +83,7 @@
     </Compile>
     <Compile Include="CardWarsSettingsViewModel.cs" />
     <Compile Include="CardWarsTile.cs" />
+    <Compile Include="CurrentPlayerChangedEventArgs.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.xaml.cs">
       <DependentUpon>PlayerControl.xaml</DependentUpon>
@@ -133,6 +135,10 @@
     <Page Include="PlayerControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
