added tooltip to placed cards
fixed binding problem with card placement trigger

--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -84,6 +84,7 @@
     <Compile Include="CardWarsSettingsViewModel.cs" />
     <Compile Include="CardWarsTile.cs" />
     <Compile Include="CurrentPlayerChangedEventArgs.cs" />
+    <Compile Include="NullToVisibilityConverter.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.xaml.cs">
       <DependentUpon>PlayerControl.xaml</DependentUpon>
