--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -69,8 +69,11 @@
     <Compile Include="CardControl.xaml.cs">
       <DependentUpon>CardControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Cards\BlueKingCard.cs" />
     <Compile Include="Cards\Card.cs" />
     <Compile Include="Cards\FallenAngelCard.cs" />
+    <Compile Include="Cards\KingCard.cs" />
+    <Compile Include="Cards\RedKingCard.cs" />
     <Compile Include="CardWarsGame.cs" />
     <Compile Include="CardWarsGameLogic.cs" />
     <Compile Include="CardWarsGameView.xaml.cs">
