fixed win condition
replaced crosshair with swords
moved some logic to Player and Card

--- a/Hextasy.Framework/Hextasy.Framework.csproj
+++ b/Hextasy.Framework/Hextasy.Framework.csproj
@@ -74,6 +74,7 @@
     <Compile Include="HexMap.cs" />
     <Compile Include="IGame.cs" />
     <Compile Include="ListExtensions.cs" />
+    <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
