--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -103,6 +103,7 @@
     <Compile Include="CardWarsSettingsViewModel.cs" />
     <Compile Include="CardWarsTile.cs" />
     <Compile Include="CurrentPlayerChangedEventArgs.cs" />
+    <Compile Include="Deck.cs" />
     <Compile Include="NullToVisibilityConverter.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.xaml.cs">
