implemented logic for spells Fireball, GreaterHeal, Heal and Lesser
added stub for Traits

--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -88,9 +88,11 @@
     <Compile Include="Cards\Spells\EnchantWeaponFrostCard.cs" />
     <Compile Include="Cards\Spells\FireballCard.cs" />
     <Compile Include="Cards\SpellCard.cs" />
+    <Compile Include="Cards\Traits\FrostWeaponTrait.cs" />
     <Compile Include="Cards\Spells\GreaterHealCard.cs" />
     <Compile Include="Cards\Spells\HealCard.cs" />
     <Compile Include="Cards\Spells\LesserHealCard.cs" />
+    <Compile Include="Cards\Trait.cs" />
     <Compile Include="CardWarsGame.cs" />
     <Compile Include="CardWarsGameLogic.cs" />
     <Compile Include="CardWarsGameView.xaml.cs">
